tests/neg/missing-implicit1.check
-- Error: tests/neg/missing-implicit1.scala:14:4 -----------------------------------------------------------------------
14 |  ff // error
   |    ^
   |no implicit argument of type testObjectInstance.Zip[Option] was found for parameter xs of method ff in object testObjectInstance
   |
   |The following import might fix the problem:
   |
   |  import testObjectInstance.instances.zipOption
   |         
-- [E008] Member Not Found Error: tests/neg/missing-implicit1.scala:16:16 ----------------------------------------------
16 |  List(1, 2, 3).traverse(x => Option(x)) // error
   |  ^^^^^^^^^^^^^^^^^^^^^^
   |  value traverse is not a member of List[Int], but could be made available as an extension method.
   |
   |  The following import might make progress towards fixing the problem:
   |
   |    import testObjectInstance.instances.traverseList
   |           
-- Error: tests/neg/missing-implicit1.scala:20:42 ----------------------------------------------------------------------
20 |    List(1, 2, 3).traverse(x => Option(x)) // error
   |                                          ^
   |no implicit argument of type testObjectInstance.Zip[Option] was found for parameter evidence$1 of method traverse in trait Traverse
   |
   |The following import might fix the problem:
   |
   |  import testObjectInstance.instances.zipOption
   |         
-- Error: tests/neg/missing-implicit1.scala:36:4 -----------------------------------------------------------------------
36 |  ff // error
   |    ^
   |    no implicit argument of type Zip[Option] was found for parameter xs of method ff
   |
   |    The following import might fix the problem:
   |
   |      import instances.zipOption
   |             
-- [E008] Member Not Found Error: tests/neg/missing-implicit1.scala:38:16 ----------------------------------------------
38 |  List(1, 2, 3).traverse(x => Option(x)) // error
   |  ^^^^^^^^^^^^^^^^^^^^^^
   |  value traverse is not a member of List[Int], but could be made available as an extension method.
   |
   |  The following import might make progress towards fixing the problem:
   |
   |    import instances.traverseList
   |           
-- Error: tests/neg/missing-implicit1.scala:42:42 ----------------------------------------------------------------------
42 |    List(1, 2, 3).traverse(x => Option(x)) // error
   |                                          ^
   |no implicit argument of type Zip[Option] was found for parameter evidence$2 of method traverse in trait Traverse
   |
   |The following import might fix the problem:
   |
   |  import instances.zipOption
   |         
